--- a/ConsoleApp15/ConsoleApp15.csproj
+++ b/ConsoleApp15/ConsoleApp15.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model1.cs" />
     <Compile Include="Warsztat.cs" />
     <Compile Include="Klient.cs" />
